+ Cambiada clase PageMapper por BasePageMapper